Added profiler support for .NET Core 2.1

--- a/_legacy/unit/Brainf_ckSharp.Profiler/Brainf_ckSharp.Profiler.csproj
+++ b/_legacy/unit/Brainf_ckSharp.Profiler/Brainf_ckSharp.Profiler.csproj
@@ -2,9 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1</TargetFrameworks>
     <RootNamespace>Brainf_ckSharp.Profiler</RootNamespace>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
+
+  <!-- .NET Standard 2.0 doesn't have the Span<T> and HashCode types -->
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.1' ">
+    <PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.0" />
+    <PackageReference Include="System.Memory" Version="4.5.3" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.0" />
