--- a/_legacy/unit/Brainf_ckSharp.Profiler/Brainf_ckSharp.Profiler.csproj
+++ b/_legacy/unit/Brainf_ckSharp.Profiler/Brainf_ckSharp.Profiler.csproj
@@ -14,12 +14,14 @@
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.0" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Scripts\Division.txt" />
     <None Remove="Scripts\Fibonacci.txt" />
     <None Remove="Scripts\HelloWorld.txt" />
     <None Remove="Scripts\Multiply.txt" />
     <None Remove="Scripts\Sum.txt" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Scripts\Division.txt" />
     <EmbeddedResource Include="Scripts\Fibonacci.txt" />
     <EmbeddedResource Include="Scripts\HelloWorld.txt" />
     <EmbeddedResource Include="Scripts\Sum.txt" />
