IDE controls and LineDiffer switched to new Toolkit APIs

--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
@@ -172,10 +172,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Brainf_ckSharp.Buffers\Brainf_ckSharp.Buffers.csproj">
-      <Project>{5f365b29-7cdf-4272-b877-37ca69daad1b}</Project>
-      <Name>Brainf_ckSharp.Buffers</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Brainf_ckSharp.Diagnostics\Brainf_ckSharp.Diagnostics.csproj">
       <Project>{a464d3e4-c6e0-48ec-a786-c2db610d9bd0}</Project>
       <Name>Brainf_ckSharp.Diagnostics</Name>
@@ -191,6 +187,10 @@
     <ProjectReference Include="..\Brainf_ckSharp\Brainf_ckSharp.csproj">
       <Project>{aceea540-7a2c-4705-ac68-5a8c3a5c2a38}</Project>
       <Name>Brainf_ckSharp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.Toolkit.HighPerformance\Microsoft.Toolkit.HighPerformance.csproj">
+      <Project>{66fd6968-86b8-45d9-9b07-fed7dfc4bf0b}</Project>
+      <Name>Microsoft.Toolkit.HighPerformance</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
