--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -390,10 +390,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Brainf_ckSharp.Buffers\Brainf_ckSharp.Buffers.csproj">
-      <Project>{5f365b29-7cdf-4272-b877-37ca69daad1b}</Project>
-      <Name>Brainf_ckSharp.Buffers</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Brainf_ckSharp.Diagnostics\Brainf_ckSharp.Diagnostics.csproj">
       <Project>{a464d3e4-c6e0-48ec-a786-c2db610d9bd0}</Project>
       <Name>Brainf_ckSharp.Diagnostics</Name>
@@ -417,6 +413,10 @@
     <ProjectReference Include="..\GitHub\GitHub.csproj">
       <Project>{9122f0d6-af88-46a6-b91f-ebafe7f59672}</Project>
       <Name>GitHub</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.Toolkit.HighPerformance\Microsoft.Toolkit.HighPerformance.csproj">
+      <Project>{66fd6968-86b8-45d9-9b07-fed7dfc4bf0b}</Project>
+      <Name>Microsoft.Toolkit.HighPerformance</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
