--- a/unit/Brainf_ck-sharp.Unit/Brainf_ckSharp.Unit.csproj
+++ b/unit/Brainf_ck-sharp.Unit/Brainf_ckSharp.Unit.csproj
@@ -23,4 +23,6 @@
     <ProjectReference Include="..\..\src\Brainf_ckSharp\Brainf_ckSharp.csproj" />
   </ItemGroup>
 
+  <Import Project="..\Brainf_ckSharp.Unit.Shared\Brainf_ckSharp.Unit.Shared.projitems" Label="Shared" />
+
 </Project>
