--- a/profiling/Brainf_ckSharp.Profiler/Brainf_ckSharp.Profiler.csproj
+++ b/profiling/Brainf_ckSharp.Profiler/Brainf_ckSharp.Profiler.csproj
@@ -22,6 +22,6 @@
     <ProjectReference Include="..\..\src\Brainf_ckSharp\Brainf_ckSharp.csproj" />
   </ItemGroup>
 
-  <Import Project="..\Brainf_ckSharp.Unit.Shared\Brainf_ckSharp.Unit.Shared.projitems" Label="Shared" />
+  <Import Project="..\..\unit\Brainf_ckSharp.Unit.Shared\Brainf_ckSharp.Unit.Shared.projitems" Label="Shared" />
 
 </Project>
