Added benchmark code

--- a/profiling/Brainf_ckSharp.Uwp.Profiler/Brainf_ckSharp.Uwp.Profiler.csproj
+++ b/profiling/Brainf_ckSharp.Uwp.Profiler/Brainf_ckSharp.Uwp.Profiler.csproj
@@ -120,6 +120,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Brainf_ckBenchmark.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
