--- a/profiling/Brainf_ckSharp.Uwp.Profiler/Brainf_ckSharp.Uwp.Profiler.csproj
+++ b/profiling/Brainf_ckSharp.Uwp.Profiler/Brainf_ckSharp.Uwp.Profiler.csproj
@@ -182,6 +182,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.9</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>6.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Brainf_ckSharp\Brainf_ckSharp.csproj">
