--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
@@ -171,12 +171,11 @@
     <PackageReference Include="Win2D.uwp">
       <Version>1.24.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit">
+      <Version>6.1.0-build.9</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Brainf_ckSharp.Diagnostics\Brainf_ckSharp.Diagnostics.csproj">
-      <Project>{a464d3e4-c6e0-48ec-a786-c2db610d9bd0}</Project>
-      <Name>Brainf_ckSharp.Diagnostics</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Brainf_ckSharp.Git\Brainf_ckSharp.Git.csproj">
       <Project>{8000d892-951c-49b3-ae95-db85d909c717}</Project>
       <Name>Brainf_ckSharp.Git</Name>
