--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -128,6 +128,9 @@
     <Compile Include="AttachedProperties\BlinkingAnimationHelper.cs" />
     <Compile Include="AttachedProperties\Brainf_ckInlineFormatterHelper.cs" />
     <Compile Include="AttachedProperties\ReactiveViewModelHelper.cs" />
+    <Compile Include="Controls\SubPages\Views\IdeResultViewTemplates.xaml.cs">
+      <DependentUpon>IdeResultViewTemplates.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\SubPages\Views\IdeSessionView.xaml.cs">
       <DependentUpon>IdeSessionView.xaml</DependentUpon>
     </Compile>
@@ -508,6 +511,10 @@
     <Page Include="Controls\SubPages\Shell\UserGuide\UserGuideSubPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\SubPages\Views\IdeResultViewTemplates.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\SubPages\Views\IdeSessionView.xaml">
       <SubType>Designer</SubType>
