Added IFile and File abstractions

--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -283,7 +283,9 @@
     <Compile Include="Resources\XamlResources.cs" />
     <Compile Include="Services\Clipboard\ClipboardService.cs" />
     <Compile Include="Services\Clipboard\IClipboardService.cs" />
+    <Compile Include="Services\Files\File.cs" />
     <Compile Include="Services\Files\FilesService.cs" />
+    <Compile Include="Services\Files\IFile.cs" />
     <Compile Include="Services\Files\IFilesService.cs" />
     <Compile Include="Services\Keyboard\IKeyboardListenerService.cs" />
     <Compile Include="Services\Keyboard\KeyboardListenerService.cs" />
